# c_practice

./: .gitignore  poly  poly.c  ptfunc.c
callback/: CMakeLists.txt  app.c  ex1.c  ex1.h
